--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     </head>
     <body>
       <link rel="stylesheet" href="style.css">
-   <form action="" method="post"> 
+   <form action="https://script.google.com/macros/s/AKfycbyWueAPhRD4zE-t-GLP6S3Gv9YdKl6zCzGbznI6tuVL/dev" method="post"> 
       <p id="Result"> </p>
       <p id="price"> </p>
       <p id="Test"> </p>
       <p id="Discount"> </p> 
     <div class="idata">
       <p id="nav1" > Name : </p>  
-      <input id="ii" type="text" placeholder="Your Name" name="data[USERNAME]"> </br>
-      <input id="ii" type="text" placeholder="Phone No " name="data[ACCOUNT NO]]"></br>
-      <input id="ii" type="number" placeholder="Age" name="data[AGE]]"></br>
-      <input id="ii" type="text" placeholder="Country" name="data[COUNTRY]"> </br>
+      <input id="ii" type="text" placeholder="Your Name" name="Username"> </br>
+      <input id="ii" type="text" placeholder="Phone No " name="PhoneNo"></br>
+      
+      <input id="ii" type="number" placeholder="Age" name="Age"></br>
+      <input id="ii" type="text" placeholder="Country" name="Country"> </br>
     <div>
       <input class="subbtn" type="submit" value="SUBMIT">
     </div>
@@ -26,4 +27,5 @@
             console.log(alert("Thank You !........  For Purchsing fruits form our Shop :)"))
        </script> -->
     </body>
+
 </html>
