--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
       <p id="Discount"> </p> 
     <div class="idata">
       <p id="nav1" > Name : </p>  
-      <input id="ii" type="text" placeholder="Your Name" name="Username"> </br>
-      <input id="ii" type="text" placeholder="Phone No " name="PhoneNo"></br>
+      <input id="ii" type="text" placeholder="Your Name" name="username"> </br>
+      <input id="ii" type="text" placeholder="Phone No " name="phoneNo"></br>
       
       <input id="ii" type="number" placeholder="Age" name="Age"></br>
-      <input id="ii" type="text" placeholder="Country" name="Country"> </br>
+      <input id="ii" type="text" placeholder="Country" name="country"> </br>
     <div>
       <input class="subbtn" type="submit" value="SUBMIT">
     </div>
@@ -29,3 +29,4 @@
     </body>
 
 </html>
+
